--- a/.gitignore
+++ b/.gitignore
@@ -13,8 +13,11 @@
 !/app/**/*
 /build
 /build/**/*
-/packages
-/packages/**/*a
+
+!/packages
+#remove the line below so you upload app-release's .opk files to git too
+/packages/**/*
+
 !/docs
 !/docs/**/*
 
