✔️ Commit #4 `stability changes`

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 !/packages
 #remove the line below so you upload app-release's .opk files to git too
 /packages/**/*
+!/packages/.gitkeep
 
 !/docs
 !/docs/**/*
