✔️ Commit #7 Stabilization Updates

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,11 +17,13 @@
     "types": ["@types/node", "@overwolf/types", "@types/eslint", "@types/react"],
     "noEmit": true,
     "noImplicitReturns": false,
-    "jsx": "react",
+    "jsx": "react-jsx",
+    "checkJs": true,
+    "jsxImportSource": "react",
     "allowJs": false,
     "isolatedModules": false,
-    "skipLibCheck": false,
-    "allowSyntheticDefaultImports": false,
+    "skipLibCheck": true,
+    "allowSyntheticDefaultImports": true,
     "importsNotUsedAsValues": "remove",
     "forceConsistentCasingInFileNames": true,
     "experimentalDecorators": true,
