--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,6 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["@typescript-eslint"],
+  "plugins": ["@typescript-eslint/eslint-plugin"],
   "rules": {}
 }
